# SAE-6.1

./: Cargo.toml
src/: app_defines.rs  main.rs  test.rs  types.rs
src/ball/: ball.rs
src/bullet/: bullet.rs
src/entities/: entity.rs
src/game_logic/: mod.rs
src/obstacles/: mod.rs
src/physics/: physics.rs
src/server/: mod.rs
src/server/Entity/: mod.rs
src/server/Entity/MovingObject/: mod.rs
src/server/Entity/MovingObject/ship/: mod.rs
src/server/Entity/MovingObject/ship/elements/aGun/: mod.rs
src/server/Entity/MovingObject/ship/elements/botElement/: mod.rs
src/server/Entity/StaticObject/: mod.rs
src/server/client_handler/: mod.rs
src/server/game_management/: mod.rs
src/server/server_thread/: mod.rs
src/server_thread/: mod.rs
src/ui/: mod.rs
src/ui/game_ui/: mod.rs
src/ui/server_ui/: mod.rs
