[package]
name = "universal_rust_server_software"
version = "0.1.0"
authors = ["URSS"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false

[dependencies]
rapier2d = { version = "0.19.0", features = [ "simd-stable" ] }
rapier3d = "0.19.0"
raylib = "3.7.0"
nalgebra = "0.32.5"  # Needed for vector operations used in rapier2d
rand = "0.9.0-alpha.1"