[package]
name = "universal_rust_server_software"
version = "0.1.0"
authors = ["URSS"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false




[dependencies]
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.10.2"
get_if_addrs = "0.3.0"
egui_plot = "0.27.2"
egui = "0.27.2"
rapier2d = "0.19.0"
rand = "0.9.0-alpha.1"